# sidra-database

./: .gitignore  AGENTS.md  README.md  plan.md  plan_sidra_search_reboot.md  plan_sidra_search_unified_cli_name_keys.md  pyproject.toml  sidra.config.json  sidra.db-journal  smoke.sh
docs/: howtouse.md  schema.md  value_atoms.md
old_R_implementation/: searching_sidra_tables.R  sidra_database_engine.R  sidra_table_database.R  table_metadata_export.R  test_semantic_engine.R
scripts/: ingest_by_coverage.py
src/: reingest_all.py
src/sidra_database/: __init__.py  api_client.py  bulk_ingest.py  cli.py  codebase_dump_sidra_database.txt  config.py  db.py  diagnostics.py  embedding.py  ingest.py  schema.py  search.py
src/sidra_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sidra_search/: __init__.py  __main__.py  codebase_dump_sidra_search.txt  config.py  smoke.sh
src/sidra_search/cli/: __init__.py
src/sidra_search/db/: base_schema.py  migrations.py  search_schema.py  session.py
src/sidra_search/ingest/: bulk.py  ingest_table.py  links.py
src/sidra_va/: __init__.py  api_client.py  base_schema.py  bulk_ingest.py  catalog.py  cli.py  config.py  coverage.py  db.py  diagnostics_base.py  discovery.py  embed.py  embedding_client.py  fingerprints.py  fuzzy.py  ingest_base.py  links.py  neighbors.py  schema_migrations.py  scoring.py  search_tables.py  search_va.py  synonyms.py  utils.py  value_index.py
tests/: __init__.py  test_bulk_ingest.py  test_ingest.py  test_va_build.py  test_va_neighbors.py  test_va_schema.py  test_va_search.py
(+10 files in other folders)
