[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sidra-database"
version = "0.1.0"
description = "Local metadata store and search tooling for IBGE SIDRA tables"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Galaxy" }]
dependencies = [
  "httpx>=0.27",
  "orjson>=3.9",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "tenacity>=8.2",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
show_error_codes = true
namespace_packages = true
mypy_path = "src"
